fix comment overflow-y

--- a/book-card.css
+++ b/book-card.css
@@ -50,10 +50,12 @@
 }
 
 .book-comments {
-  display: grid;
-  grid-template-columns: max-content max-content max-content;
-  gap: 8px;
-  overflow-wrap: break-word;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  height: 120px;
+  scrollbar-width: thin;
+  scrollbar-color: #3bc7f2 #0f404f;
 }
 
 .break-word {
@@ -65,7 +67,29 @@
 }
 
 .comment-input {
+  color: white;
   flex-grow: 1;
+  background-color: #175f75;
+  border: 0px solid;
+}
+
+.comment-input:focus {
+  outline: none;
+}
+
+.comment-input::placeholder {
+  color: azure;
+  opacity: 1;
+}
+
+.comment-send-btn {
+  background-color: #0f404f;
+  border: none;
+}
+
+.comment-send-btn:hover {
+  cursor: pointer;
+  filter: drop-shadow(0px 0px 4px #ffffff);
 }
 
 @media (max-width: 536px) {
